--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
         build: ./backend
         container_name: flask-backend
         restart: always
-        volumes: ./backend:/app
+        volumes:
+            - ./backend:/app
         env_file:
             - .env
         ports:
@@ -25,7 +26,8 @@ services:
         build: ./frontend
         container_name: react-frontend
         restart: always
-        volumes: ./frontend:/app
+        volumes:
+            - ./frontend:/app
         ports:
             - "80:3000"
         depends_on:
