--- a/.env
+++ b/.env
@@ -5,5 +5,4 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
 POSTGRES_DB=mydb
 
-
-DB_URI=postrgesql://admin:password@db:5432/mydb
+DB_URI=postgresql://user:password@db:5432/mydb
