--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
 POSTGRES_DB=mydb
 
+PYTHONPATH=backend
+
 DB_URI=postgresql://admin:password@db:5432/mydb
