--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,22 @@
-FROM node:18
+FROM node:18-alpine as build
 
 WORKDIR /app
 
 COPY package*.json ./
-
 RUN npm install
 
-COPY . .
+COPY . ./
+RUN npm run build
+
+# ------------------------------
+
+FROM nginx:stable-alpine
+
+# Копируем собранный билд React в директорию, обслуживаемую Nginx
+COPY --from=build /app/build /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
-CMD ["npm","start"]
-
+CMD ["nginx", "-g", "daemon off;"]
