--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
@@ -13,32 +13,19 @@ http {
     server {
         listen 80;
 
+
         location / {
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri /index.html;
         }
 
+
         location /api/ {
             proxy_pass http://flask-backend:5000/;
             proxy_http_version 1.1;
 
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_read_timeout 86400;
-            proxy_redirect off;
-        }
-
-        location /api/socket.io/ {
-            proxy_pass http://flask-backend:5000/socket.io/;
-            proxy_http_version 1.1;
-
+            # WebSocket headers
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 
