--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,7 +21,7 @@ http {
         }
 
         location /api/socket.io/ {
-            proxy_pass http://flask-backend:5000/socket.io/;
+            proxy_pass http://flask-backend:5000/api/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
