--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,9 +10,27 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    gzip on;
+    gzip_comp_level 6;
+    gzip_min_length 256;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade";
+    add_header X-XSS-Protection "1; mode=block";
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        root /usr/share/nginx/html;
+        expires 7d;
+        add_header Cache-Control "public";
+    }
+
     server {
         listen 80;
-
 
         location / {
             root /usr/share/nginx/html;
@@ -20,30 +38,22 @@ http {
             try_files $uri /index.html;
         }
 
-        location /api/socket.io/ {
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            proxy_pass http://flask-backend:5000/api/socket.io/;
-
-        }
-
         location /api/ {
-            proxy_pass http://flask-backend:5000/;
-            proxy_http_version 1.1;
+             proxy_pass http://flask-backend:5000/;
 
-            # WebSocket headers
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+             # Важно для WebSocket
+             proxy_http_version 1.1;
+             proxy_set_header Upgrade $http_upgrade;
+             proxy_set_header Connection "upgrade";
 
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+             # Передаём клиентскую информацию
+             proxy_set_header Host $host;
+             proxy_set_header X-Real-IP $remote_addr;
+             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+             proxy_set_header X-Forwarded-Proto $scheme;
 
-            proxy_read_timeout 86400;
-            proxy_redirect off;
+             proxy_read_timeout 86400;
+             proxy_redirect off;
         }
     }
 }
