--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -40,6 +40,19 @@ http {
             try_files $uri /index.html;
         }
 
+        location /api/socket.io/ {
+            proxy_pass http://flask-backend:5000/api/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400;
+            proxy_redirect off;
+        }
+
         location /api/ {
              proxy_pass http://flask-backend:5000/;
 
