--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY . ./
-RUN NODE_ENV=production npm run build
+RUN  npm run build
 
 # ------------------------------
 
