--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - avatars:/app/app/static/avatars
-      - ./backend/app:/app/app
+      - ./static:/static
     depends_on:
       db:
         condition: service_healthy
@@ -35,6 +34,8 @@ services:
       dockerfile: Dockerfile
     container_name: react-frontend
     restart: always
+    volumes:
+      - ./avatars:/usr/share/nginx/html/avatars
     ports:
       - "80:80"
     depends_on:
@@ -43,6 +44,6 @@ services:
 
 volumes:
   pgdata:
-  avatars:
+
 
 
