--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,6 +28,13 @@ http {
     server {
         listen 80;
 
+        location /avatars/ {
+            alias /avatars;
+            try_files $uri /avatars/default.png;
+            access_log off;
+            add_header Cache-Control "public, max-age=31536000";
+        }
+
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             root /usr/share/nginx/html;
             expires 7d;
