--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     container_name: react-frontend
     restart: always
     volumes:
-      - ./avatars:/usr/share/nginx/html/avatars
+      - .static/avatars:/usr/share/nginx/html/avatars
     ports:
       - "80:80"
     depends_on:
