--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,9 +28,16 @@ http {
     server {
         listen 80;
 
-        location /avatars/ {
-            alias /avatars;
-            try_files $uri /avatars/default.png;
+        location /avatars/users/ {
+            alias /avatars/users/;
+            try_files $uri /avatars/users/default.png;
+            access_log off;
+            add_header Cache-Control "public, max-age=31536000";
+        }
+
+        location /avatars/chats/ {
+            alias /avatars/chats/;
+            try_files $uri /avatars/chats/default.png;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
