--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,14 +29,14 @@ http {
         listen 80;
 
         location /avatars/users/ {
-            alias /avatars/users/;
+            root /usr/share/nginx/html;
             try_files $uri /avatars/users/default.png;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
 
         location /avatars/chats/ {
-            alias /avatars/chats/;
+            root /usr/share/nginx/html;
             try_files $uri /avatars/chats/default.png;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
