--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -31,17 +31,28 @@ http {
         location /avatars/users/ {
             root /usr/share/nginx/html;
             try_files $uri /avatars/users/default.png;
+            error_page 404 = @user_default_avatar;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
+
+
 
         location /avatars/chats/ {
             root /usr/share/nginx/html;
             try_files $uri /avatars/chats/default.png;
+            error_page 404 = @chat_default_avatar;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
 
+        location @user_default_avatar {
+            alias /avatars/users/default.png;
+        }
+
+        location @chat_default_avatar {
+            alias /avatars/chats/default.png;
+        }
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             root /usr/share/nginx/html;
             expires 7d;
