--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,25 +28,18 @@ http {
     server {
         listen 80;
 
-        location /avatars/users/ {
-            root /usr/share/nginx/html;
-            try_files $uri /avatars/users/default.png;
+        location ~ ^/avatars/(.+\.(jpg|jpeg|png|webp))$ {
+            alias /var/www/avatars/;
+            try_files $1 /static/default.png;
 
-            access_log off;
-            add_header Cache-Control "public, max-age=31536000";
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+
+            if ($http_accept ~* "webp") {
+                add_header Vary Accept;
+                try_files $1.webp $1 =404;
+            }
         }
-
-
-
-        location /avatars/chats/ {
-            root /usr/share/nginx/html;
-            try_files $uri /avatars/chats/default.png;
-
-            access_log off;
-            add_header Cache-Control "public, max-age=31536000";
-        }
-
-
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             root /usr/share/nginx/html;
             expires 7d;
