--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,35 +7,56 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+
     sendfile        on;
+    tcp_nopush     on;
+    tcp_nodelay    on;
+
     keepalive_timeout  65;
+    client_max_body_size 10M;
+    large_client_header_buffers 4 16k;
 
     gzip on;
+    gzip_static on;
     gzip_comp_level 6;
     gzip_min_length 256;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    etag on;
+
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade";
-    add_header X-XSS-Protection "1; mode=block";
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ws: wss:; img-src 'self' data:; style-src 'self' 'unsafe-inline';" always;
 
-    access_log /var/log/nginx/access.log;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
 
     server {
         listen 80;
 
-         location /avatars/users/ {
+        location /avatars/users/ {
             root /usr/share/nginx/html;
-            try_files $uri /avatars/users/default.png;
+            try_files $uri /avatars/users/default.png =404;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
 
         location /avatars/chats/ {
             root /usr/share/nginx/html;
-            try_files $uri /avatars/chats/default.png;
+            try_files $uri /avatars/chats/default.png =404;
             access_log off;
             add_header Cache-Control "public, max-age=31536000";
         }
@@ -50,13 +71,14 @@ http {
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri /index.html;
+            add_header Cache-Control "no-cache";
         }
 
         location /api/socket.io/ {
             proxy_pass http://flask-backend:5000/api/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -66,16 +88,13 @@ http {
         }
 
         location /api/ {
-             proxy_pass http://flask-backend:5000/;
-
-             # Передаём клиентскую информацию
-             proxy_set_header Host $host;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-Forwarded-Proto $scheme;
-
-             proxy_read_timeout 86400;
-             proxy_redirect off;
+            proxy_pass http://flask-backend:5000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400;
+            proxy_redirect off;
         }
     }
 }
